# cds-pipeline-sample

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  workspace.yml
.github/workflows/: deployment.yml
cds_pipeline_sample/: __init__.py
cds_pipeline_sample/assets/: __init__.py
surf_l201/: .user.yml  dbt_project.yml  profiles.yml
surf_l201/models/analytic/: analytic__surf.sql
surf_l201/models/staging/lims/: _lims__config.yml  stg_foda_raw.sql  stg_lims__l201.sql
tmp1hfmteag/history/: runs.db
tmp1hfmteag/history/runs/: 9290e651-a0cb-47c3-a596-24cd27b0fac6.db  ea9d4dd6-15a9-4888-8f99-34c5a274f80a.db  index.db
tmp1hfmteag/schedules/: schedules.db
tmp1hfmteag/storage/9290e651-a0cb-47c3-a596-24cd27b0fac6/compute_logs/: qgjfvyru.err
tmp1hfmteag/storage/ea9d4dd6-15a9-4888-8f99-34c5a274f80a/compute_logs/: lbjmrrbv.err
