[tool.poetry]
name = "cds_pipeline_sample"
version = "0.1.0"
description = ""
authors = ["Tony Wu <wu@delfidiagnostics.com>"]
readme = "README.md"
packages = [{include = "cds_pipeline_sample"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.5"
dagit = "^1.3.5"
dagster-aws = "^0.19.5"
dagster-graphql = "^1.3.5"
dagster-k8s = "^0.19.5"
dagster-postgres = "^0.19.5"
docker = "^6.1.2"
docker-image-py = "^0.1.12"
dagster-dbt = "^0.19.5"
grpcio = "<=1.47.5"
dbt-duckdb = "1.5.1"
delfipypr = "^0.5.0"

[tool.dagster]
module_name = "cds_pipeline_sample"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
